	* vc-git.el (vc-git-state): Call vc-git-unregistered so
	we report the 'unregistered state reliably.
	* vc-hooks (vc-state): Document that vc-unregistered is
	now expected to be returned reliably.
	* vc.el (vc-default-dired-state): Change needs-patch state to
	needs-update, since the name now shows up in dir-status listings
	and was somewhat misleading.

2008-05-01  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-delete-file): Check if the file has uncommitted changed.

2008-05-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in: Revert incorrect fix for claimed bootstrap breakage.

2008-05-01  Daiki Ueno  <ueno@unixuser.org>

	* epa-file-hook.el: New file split from epa-file.el.
	* epa-file.el: Require 'epa-file-hook.
	(epa-file-handler): Add autoload cookie.
	* loadup.el: Load epa-file-hook.
	* startup.el (command-line): Eval the body of auto-encryption-mode.

2008-05-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-dir-mode-map): Don't bind "r".

	* vc-hg.el (vc-hg-extra-fileinfo): New defstruct.
	(vc-hg-status-printer): New function.
	(vc-hg-after-dir-status): Deal with copied and renamed files.
	(vc-hg-dir-status): Add flag to show copied files.

2008-05-01  John Paul Wallington  <jpw@pobox.com>

	* ibuffer.el (ibuffer-last-sorting-mode): New variable.
	(ibuffer-do-sort-by-recency): Reverse sorting order if last
	sorting mode was recency.

	* ibuf-macs.el (define-ibuffer-sorter): Define the sorter to
	reverse sorting order if last sorting mode was the sorter's.

2008-05-01  Jason Rumney  <jasonr@gnu.org>

	* w32-fns.el (w32-charset-info-alist): Map vietnamese to windows-1258.

2008-04-30  John Paul Wallington  <jpw@pobox.com>

	* ibuffer.el (define-ibuffer-column filename): When the major mode
	is `vc-dir-mode' show the buffer's default directory.

	* ibuf-ext.el (define-ibuffer-filter filename): Likewise when the
	major mode is `vc-dir-mode' use the buffer's default directory.

2008-04-30  Sam Steingold  <sds@gnu.org>
